tests/tigs/let_expr/type_declaration/semantic_error/cyclic_definition.tig
let
    type A = B
    type B = A
in
end
